    do nothing, e.g. changing rate from 8000 to 8000, or changing volume
    by 0dB [Bug# 1395781].  (robs)
  o Removed (for output file only) the potentially
    problematic -v option.  Use the vol effect instead.  (robs)
  o Added prompt to overwrite pre-existing output file (unless overridden
    with --force).  (robs)
  o Added silence padding effect.  (robs)

sox-12.18.2
-----------
  o Adding in Debian's disk full fix (#313206).
  o Finally got rid of reference to cleanup() function in
    library.  Applications are now required to detect
    all failures from return codes and cleanup as they
    want.
  o Changed how list of formats and effects are stored internally.
    Effects libst users only. Dirk
  o Store effects usage so that its accessable by applications.
    Dirk
  o Modify the synth effect to not use SIGINT to stop processing
    and instead return ST_EOF.  This allows exact acount of
    samples to be written out instead of an approximate amount.
  o Fix hangup when attempting to write stereo MP3 files.
    (1512218) Kendrick Shaw
  o Deemp effect would lose stereo sepeartion. (1479249)
  o Adding cross-platform support for getopt_long
  o Make help screens print much more information and add
    new --help-effect option.  (Originally from Dirk).
  o Add support for using an external gsm library instead of
    just the internal one.  Vladimir Nadvornik
  o Updates to nul file handler to prevent crashes during output.
    Martin Panter (1482869)

sox-12.18.1
------------

  o The "filter" effect could go into infinite drain mode.  Now
    only drain 1 buffer.  noisered as well.
  o SoX was ignoring user aborts (ctrl-c) if it occured during
    effect drain operations.  This was bad if effects had
    bugs and stuck in infinite loop.
  o Stop SoX from crashing when file type could not be auto
    determined (1417776).
  o Output filenames with multiple '.' confused SoX.  (1417776)
    Christian Hammer